--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <div class="card mb-3" style="max-width: 540px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="JSON/15.jpeg" class="card-img" alt="Обложка книги">
+        </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Название карточки</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
