--- a/template.html
+++ b/template.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Hello, world</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello, world</h1>
 
     {% for book in books %}
       <div class="card mb-3" style="max-width: 540px;">
@@ -23,7 +23,7 @@
           <div class="card-body">
             <h5 class="card-title">{{ book['title'] }}</h5>
             <p class="card-text">{{  book['author'] }}</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text"><small class="text-muted">Last updated 2 hours ago</small></p>
           </div>
         </div>
         </div>
