--- a/template.html
+++ b/template.html
@@ -13,21 +13,52 @@
   <body>
     <h1>Hello, world</h1>
 
-    {% for book in books %}
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src={{ book["img_src"] }} class="card-img" alt="Обложка книги">
-          </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">{{ book['title'] }}</h5>
-            <p class="card-text">{{  book['author'] }}</p>
-            <p class="card-text"><small class="text-muted">Last updated 2 hours ago</small></p>
-          </div>
+    {% for two_books in books %}
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src={{ two_books[0]["img_src"] }} class="card-img" alt="Обложка книги">
+                            </div>
+
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ two_books[0]['title'] }}</h5>
+                                    <p class="card-text">{{  two_books[0]['author'] }}</p>
+                                    <p class="card-text"><small class="text-muted">Last updated 5 hours ago</small></p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                {% if two_books[1] %}
+                    <div class="col">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src={{ two_books[1]["img_src"] }} class="card-img" alt="Обложка книги">
+                                </div>
+
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ two_books[1]['title'] }}</h5>
+                                        <p class="card-text">{{  two_books[1]['author'] }}</p>
+                                        <p class="card-text"><small class="text-muted">Last updated 2 hours ago</small></p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                {% endif %}
+                <div class="w-100"></div>
+            </div>
         </div>
-        </div>
-      </div>
 
     {% endfor %}
 
