--- a/template.html
+++ b/template.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world</title>
+    <title>Книги</title>
   </head>
   <body>
-    <h1>Hello, world</h1>
+    <h1 align="center">Научная фантастика</h1>
 
     {% for two_books in books %}
 
@@ -26,9 +26,9 @@
 
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">{{ two_books[0]['title'] }}</h5>
-                                    <p class="card-text">{{  two_books[0]['author'] }}</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 5 hours ago</small></p>
+                                    <h5 class="card-title">{{ two_books[0]["title"] }}</h5>
+                                    <p class="card-text">{{  two_books[0]["author"] }}</p>
+                                    <p><a href= {{ two_books[0]["book_path"] }} target="_blank">Читать</a></p>
                                 </div>
                             </div>
 
@@ -45,9 +45,9 @@
 
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">{{ two_books[1]['title'] }}</h5>
-                                        <p class="card-text">{{  two_books[1]['author'] }}</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 2 hours ago</small></p>
+                                        <h5 class="card-title">{{ two_books[1]["title"] }}</h5>
+                                        <p class="card-text">{{  two_books[1]["author"] }}</p>
+                                        <p><a href= {{ two_books[1]["book_path"] }} target="_blank">Читать</a></p>
                                     </div>
                                 </div>
 
