--- a/template.html
+++ b/template.html
@@ -14,11 +14,9 @@
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="index1.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="index2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="index3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="index4.html">4</a></li>
-            <li class="page-item"><a class="page-link" href="index5.html">5</a></li>
+            {% for page in range(total_pages) %}
+                <li class="page-item"><a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a></li>
+            {% endfor %}
             <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
     </nav>
@@ -35,7 +33,7 @@
                             <div class="col-md-4">
                                 <img src={{ two_books[0]["img_src"] }} class="card-img" alt="Обложка книги">
                             </div>
-
+                                <p class="card-text">{{ two_books[0]["img_src"] }}</p>
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ two_books[0]["title"] }}</h5>
