--- a/template.html
+++ b/template.html
@@ -13,11 +13,12 @@
   <body>
     <nav aria-label="Page navigation">
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
+
             {% for page in range(total_pages) %}
-                <li class="page-item"><a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a></li>
+                <li class="page-item" ><a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a></li>
             {% endfor %}
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            <li class="page-item"><a class="page-link" href="#">Вперед</a></li>
         </ul>
     </nav>
 
@@ -33,7 +34,7 @@
                             <div class="col-md-4">
                                 <img src={{ two_books[0]["img_src"] }} class="card-img" alt="Обложка книги">
                             </div>
-                                <p class="card-text">{{ two_books[0]["img_src"] }}</p>
+
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ two_books[0]["title"] }}</h5>
