Fix mistakes (' in url)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url='https://dim4ik8.github.io/library/pages/index1.html">
+<meta http-equiv="refresh" content="0; url='https://dim4ik8.github.io/library/pages/index1.html'">
