--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url='https://dim4ik8.github.io/library/pages/index1.html'">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url='https://dim4ik8.github.io/library/pages/index1.html'">
+    <title>Title</title>
+</head>
+<body>
+
+</body>
+</html>
