--- a/template.html
+++ b/template.html
@@ -12,87 +12,81 @@
   </head>
   <body>
     <style>
-        nav {
-            margin: 40px;
-        }
+      nav {
+        margin: 40px;
+          }
     </style>
-  <nav aria-label="Page navigation">
-        <ul class="pagination">
-            {% if current_page == 1 %}
-                <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        {% if current_page == 1 %}
+          <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
             {% else %}
-                <li class="page-item"><a class="page-link" href="index{{ current_page - 1 }}.html">Назад</a></li>
+              <li class="page-item"><a class="page-link" href="index{{ current_page - 1 }}.html">Назад</a></li>
             {% endif %}
             {% for page in range(total_pages) %}
-                <li class="page-item {% if page + 1 == current_page %}active{% endif %}">
-                <a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a></li>
+              <li class="page-item {% if page + 1 == current_page %}active{% endif %}">
+                <a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a>
+              </li>
             {% endfor %}
             {% if current_page == total_pages %}
-                <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
+              <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
             {% else %}
-                <li class="page-item"><a class="page-link" href="index{{ current_page + 1 }}.html">Вперед</a></li>
+              <li class="page-item"><a class="page-link" href="index{{ current_page + 1 }}.html">Вперед</a></li>
             {% endif %}
-        </ul>
+      </ul>
     </nav>
 
     {% for two_books in books %}
-
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <img src="{{ two_books[0]["img_src"] }}" class="card-img" alt="Обложка книги">
-                            </div>
-
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ two_books[0]["title"] }}</h5>
-                                    <p class="card-text">{{  two_books[0]["author"] }}</p>
-                                    {% for genre in two_books[0]["genres"] %}
-                                            <h6><span class="badge badge-pill badge-secondary">{{  genre }}</span></h6>
-                                        {% endfor %}
-                                    <p><a href="{{ two_books[0]["book_path"] }}" target="_blank">Читать</a></p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img src="{{ two_books[0]["img_src"] }}" class="card-img" alt="Обложка книги">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ two_books[0]["title"] }}</h5>
+                    <p class="card-text">{{  two_books[0]["author"] }}</p>
+                    {% for genre in two_books[0]["genres"] %}
+                      <h6><span class="badge badge-pill badge-secondary">{{  genre }}</span></h6>
+                    {% endfor %}
+                    <p><a href="{{ two_books[0]["book_path"] }}" target="_blank">Читать</a></p>
+                  </div>
                 </div>
 
-                {% if two_books[1] %}
-                    <div class="col">
-                        <div class="card mb-3" style="max-width: 540px;">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img src="{{ two_books[1]["img_src"] }}" class="card-img" alt="Обложка книги">
-                                </div>
-
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ two_books[1]["title"] }}</h5>
-                                        <p class="card-text">{{  two_books[1]["author"] }}</p>
-                                        {% for genre in two_books[1]["genres"] %}
-                                            <h6><span class="badge badge-pill badge-secondary">{{  genre }}</span></h6>
-                                        {% endfor %}
-                                        <p><a href= "{{ two_books[1]["book_path"] }}" target="_blank">Читать</a></p>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                {% endif %}
-                <div class="w-100"></div>
+              </div>
             </div>
+          </div>
+          {% if two_books[1] %}
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img src="{{ two_books[1]["img_src"] }}" class="card-img" alt="Обложка книги">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">{{ two_books[1]["title"] }}</h5>
+                      <p class="card-text">{{  two_books[1]["author"] }}</p>
+                      {% for genre in two_books[1]["genres"] %}
+                        <h6><span class="badge badge-pill badge-secondary">{{  genre }}</span></h6>
+                      {% endfor %}
+                      <p><a href= "{{ two_books[1]["book_path"] }}" target="_blank">Читать</a></p>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            {% endif %}
+            <div class="w-100"></div>
         </div>
+      </div>
 
     {% endfor %}
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../static/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
