--- a/template.html
+++ b/template.html
@@ -7,35 +7,32 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css.style.css">
 
     <title>Книги</title>
   </head>
   <body>
-    <style>
-      nav {
-        margin: 40px;
-          }
-    </style>
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        {% if current_page == 1 %}
-          <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
-            {% else %}
-              <li class="page-item"><a class="page-link" href="index{{ current_page - 1 }}.html">Назад</a></li>
-            {% endif %}
-            {% for page in range(total_pages) %}
-              <li class="page-item {% if page + 1 == current_page %}active{% endif %}">
-                <a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a>
-              </li>
-            {% endfor %}
-            {% if current_page == total_pages %}
-              <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
-            {% else %}
-              <li class="page-item"><a class="page-link" href="index{{ current_page + 1 }}.html">Вперед</a></li>
-            {% endif %}
-      </ul>
-    </nav>
-
+    <div class="mx-auto mt-3" style="width: 200px;">
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          {% if current_page == 1 %}
+            <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
+              {% else %}
+                <li class="page-item"><a class="page-link" href="index{{ current_page - 1 }}.html">Назад</a></li>
+              {% endif %}
+              {% for page in range(total_pages) %}
+                <li class="page-item {% if page + 1 == current_page %}active{% endif %}">
+                  <a class="page-link" href="index{{ page+1 }}.html">{{ page+1 }}</a>
+                </li>
+              {% endfor %}
+              {% if current_page == total_pages %}
+                <li class="page-item disabled"><a class="page-link" href="#">Вперед</a></li>
+              {% else %}
+                <li class="page-item"><a class="page-link" href="index{{ current_page + 1 }}.html">Вперед</a></li>
+              {% endif %}
+        </ul>
+      </nav>
+    </div>
     {% for two_books in books %}
       <div class="container">
         <div class="row">
