--- a/pages/index5.html
+++ b/pages/index5.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css.style.css">
 
-    <title>Книг</title>
+    <title>Книги</title>
   </head>
   <body>
     <div class="mx-auto mt-3" style="width: 200px;">
