--- a/template.html
+++ b/template.html
@@ -42,7 +42,7 @@
             <div class="card mb-4" style="max-width: 540px;">
               <div class="row no-gutters">
                 <div class="col-3">
-                  <img src="{{book.img_src }}" class="card-img" alt="{{book.ID}}">
+                  <img src="{{book.img_src|urlencode}}" class="card-img" alt="{{book.ID}}">
                 </div>
                 <div class="col-7">
                   <div class="card-body">
@@ -51,7 +51,7 @@
                     {% for genre in book.genres %}
                       <span class="badge badge-pill badge-light mb-3">{{genre}}</span>
                     {% endfor %}
-                    <div><a href="{{book.book_path}}" target="_blank"> Читать </a></div>
+                    <div><a href="{{book.book_path|urlencode}}" target="_blank"> Читать </a></div>
                   </div>
                 </div>
               </div>
