--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../static/css.style.css">
     <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
 
-    <title>Книги</title>
+    <title>Просто  </title>
   </head>
   <body>
     <div class="mx-auto mt-3" style="width: 200px;">
