--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
     <title>Книги для всех</title>
   </head>
   <body>
-    <div class="mx-auto mt-3" style="width: 200px;">
+    <div class="mx-auto mt-3 d-flex justify-content-center" style="width: 200px;">
       <nav aria-label="Page navigation">
         <ul class="pagination">
           {% if current_page == 1 %}
@@ -46,8 +46,8 @@
                 </div>
                 <div class="col-7">
                   <div class="card-body">
-                    <h5 class="card-title">{{book.title}}</h5>
-                    <h5 class="card-title">{{book.author}}</h5>
+                    <h5 class="card-title font-weight-bold h3">{{book.title}}</h5>
+                    <h5 class="card-title h5">{{book.author}}</h5>
                     {% for genre in book.genres %}
                       <span class="badge badge-pill badge-light mb-3">{{genre}}</span>
                     {% endfor %}
